<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">log_in From</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">login</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="setting1">setting1</string>
    <string name="user1">user1</string>
    <string name="user">user</string>
    <string name="userimage">userimage</string>

</resources>
